overflow fix

--- a/css/newStyles.css
+++ b/css/newStyles.css
@@ -113,7 +113,7 @@ body {
     z-index: 1;
     text-shadow: -0.5px -0.5px 0 #555, 0.5px -0.5px 0 #555, -0.5px 0.5px 0 #555, 0.5px 1px 0 #555;
     max-height: 200px;
-    overflow: scroll;
+    overflow: auto;
     overflow-x: hidden;
 
 }
